second commit. song player now plays. also changed the http in the user service to https.

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,5 +1,7 @@
-<div class = "navbar"><audio controls autoplay = true>
-    <source src = "{{url}}">
+<div class = "navbar">
+  <audio [src] = "url" controls autoplay = true>
+   
+
     
   Your browser does not support the audio element.
   </audio>
