css modified of login page

--- a/src/app/show-songs/show-songs.component.css
+++ b/src/app/show-songs/show-songs.component.css
@@ -7,12 +7,18 @@
     width: 60%;
     margin-left: 20%;
     margin-right: 20%;
-    margin-top: 5%;
+    
 }
 
 .btn
 {
     margin-left: 50px;
     margin-right: -50px;
+}
+
+td
+{
+    height: 10px !important;
+    padding: 3px;
 }
 
