--- a/src/app/register-component/register-component.component.html
+++ b/src/app/register-component/register-component.component.html
@@ -1,6 +1,7 @@
 <app-free-bar></app-free-bar>
-
-
+<div class="all">
+<html>
+<body>
 <div class="formContainer">
 <h3>Register</h3>
     <form [formGroup] = "userForm" (submit) = "register()">
@@ -38,4 +39,9 @@
     <button class = 'btn btn-success' routerLink = "">Login</button>
 
 
+</div>
+
+</body>
+
+</html>
 </div>
