--- a/src/app/register-component/register-component.component.css
+++ b/src/app/register-component/register-component.component.css
@@ -1,9 +1,28 @@
 .formContainer
 {
     margin-left: 670px;
-    MARGIN-TOP: 80px;
+    margin-top: 80px;
+    
 }
 
+html
+{
+    height: 100%;
+    margin: 0;
+}
+body
+{
+    
+    
+    height: 100%;
+    margin: 0;
+    
+}
+
+.all
+{
+    background-color: red !important;
+}
 
 button
 {
