--- a/src/app/show-playlists/show-playlists.component.css
+++ b/src/app/show-playlists/show-playlists.component.css
@@ -24,3 +24,11 @@ label
 {
     margin-left: 5px;
 }
+
+.all
+{
+    height: 100%;
+    background-image: url('./playlist-img.jpg');
+    background-position: center;
+    padding-bottom: 1000px;
+}
