--- a/src/app/show-songs/show-songs.component.css
+++ b/src/app/show-songs/show-songs.component.css
@@ -1,19 +1,32 @@
 .tableContainer
 {
     
-    border: 1px solid black;
-    float: left;
+    
+    display: inline-block;
     text-align: center !important;
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-top: 0;
+    border-top: 0;
+    
+    width: 100%;
+    height: 100%;
+    background-image: url('./notes.jpg');
+    
+    
+}
+
+.all
+{
+    width: 100%;
+    height: 100%;
     
 }
 
 .btn
 {
-    margin-left: 50px;
-    margin-right: -50px;
+    margin-left: 2.9%;
+    margin-right: 21.9%;
+
+    
 }
 
 td
@@ -21,4 +34,20 @@ td
     height: 10px !important;
     padding: 3px;
 }
+
+table
+{
+    
+    width: 50%;
+    display: inline-block;
+    
+}
+
+span
+{
+    display: inline-block;
+    
+}
+
+
 
