--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -1,14 +1,10 @@
 .container
 {
-    margin: auto;
-    border: 1px solid black;
-    width: 30%;
-    padding-top:5%;
-    padding-bottom:5%;
+   margin: auto;
     display: inline-block;
 }
 
 .superContainer
-{   margin-top: 10%;
-    text-align: center;
+{   
+    
 }
