--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,13 +1,18 @@
 <app-options-bar></app-options-bar>
 <div class="superContainer">
     <div *ngIf="loaded" class=container>
-        <h5>Name: {{user.fullname}}</h5>
+        <h3>Welcome, {{user.fullname}}!</h3>
 
-        <h5>Username: {{user.username}}</h5>
 
-        <h5>Age: {{user.age}}</h5>
+        <p>Your details are as follows:</p>
 
-        <h5>Gender: {{user.gender}}</h5>
+
+
+        <p><strong>Username:</strong> {{user.username}}</p> 
+
+        <p><strong>Age:</strong> {{user.age}}</p>
+
+        <p><strong>Gender:</strong> {{user.gender}}</p>
 
     </div>
 
